; ModuleID = '/home/carl/AnghaBench/linux/drivers/infiniband/hw/mlx4/extr_mr.c_mlx4_ib_umem_write_mtt_block.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/infiniband/hw/mlx4/extr_mr.c_mlx4_ib_umem_write_mtt_block.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mlx4_ib_dev = type { i32 }
%struct.mlx4_mtt = type { i32 }

@.str = private unnamed_addr constant [55 x i8] c"write_block: len %llx is not aligned to mtt_size %llx\0A\00", align 1
@EINVAL = common dso_local global i32 0, align 4
@PAGE_SIZE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.mlx4_ib_dev*, %struct.mlx4_mtt*, i32, i32, i32, i32, i32*, i32*, i32*)* @mlx4_ib_umem_write_mtt_block to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mlx4_ib_umem_write_mtt_block(%struct.mlx4_ib_dev* %0, %struct.mlx4_mtt* %1, i32 %2, i32 %3, i32 %4, i32 %5, i32* %6, i32* %7, i32* %8) #0 {
  %10 = alloca i32, align 4
  %11 = alloca %struct.mlx4_ib_dev*, align 8
  %12 = alloca %struct.mlx4_mtt*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  %17 = alloca i32*, align 8
  %18 = alloca i32*, align 8
  %19 = alloca i32*, align 8
  %20 = alloca i32, align 4
  %21 = alloca i32, align 4
  %22 = alloca i32, align 4
  %23 = alloca i32, align 4
  %24 = alloca i32, align 4
  store %struct.mlx4_ib_dev* %0, %struct.mlx4_ib_dev** %11, align 8
  store %struct.mlx4_mtt* %1, %struct.mlx4_mtt** %12, align 8
  store i32 %2, i32* %13, align 4
  store i32 %3, i32* %14, align 4
  store i32 %4, i32* %15, align 4
  store i32 %5, i32* %16, align 4
  store i32* %6, i32** %17, align 8
  store i32* %7, i32** %18, align 8
  store i32* %8, i32** %19, align 8
  %25 = load i32, i32* %16, align 4
  %26 = load i32, i32* %15, align 4
  %27 = add nsw i32 %25, %26
  store i32 %27, i32* %20, align 4
  store i32 0, i32* %21, align 4
  store i32 0, i32* %23, align 4
  %28 = load i32, i32* %16, align 4
  %29 = sext i32 %28 to i64
  %30 = load i32, i32* %13, align 4
  %31 = sext i32 %30 to i64
  %32 = sub i64 %31, 1
  %33 = and i64 %29, %32
  %34 = load i32, i32* %15, align 4
  %35 = sext i32 %34 to i64
  %36 = add i64 %35, %33
  %37 = trunc i64 %36 to i32
  store i32 %37, i32* %15, align 4
  %38 = load i32, i32* %20, align 4
  %39 = load i32, i32* %13, align 4
  %40 = call i32 @round_up(i32 %38, i32 %39)
  store i32 %40, i32* %21, align 4
  %41 = load i32, i32* %21, align 4
  %42 = load i32, i32* %20, align 4
  %43 = sub nsw i32 %41, %42
  %44 = load i32, i32* %15, align 4
  %45 = add nsw i32 %44, %43
  store i32 %45, i32* %15, align 4
  %46 = load i32, i32* %15, align 4
  %47 = sext i32 %46 to i64
  %48 = load i32, i32* %13, align 4
  %49 = sext i32 %48 to i64
  %50 = sub i64 %49, 1
  %51 = and i64 %47, %50
  %52 = icmp ne i64 %51, 0
  br i1 %52, label %53, label %59

53:                                               ; preds = %9
  %54 = load i32, i32* %15, align 4
  %55 = load i32, i32* %13, align 4
  %56 = call i32 @pr_warn(i8* getelementptr inbounds ([55 x i8], [55 x i8]* @.str, i64 0, i64 0), i32 %54, i32 %55)
  %57 = load i32, i32* @EINVAL, align 4
  %58 = sub nsw i32 0, %57
  store i32 %58, i32* %10, align 4
  br label %118

59:                                               ; preds = %9
  %60 = load i32, i32* %15, align 4
  %61 = load i32, i32* %14, align 4
  %62 = ashr i32 %60, %61
  store i32 %62, i32* %22, align 4
  %63 = load i32, i32* %16, align 4
  %64 = load i32, i32* %13, align 4
  %65 = call i32 @round_down(i32 %63, i32 %64)
  store i32 %65, i32* %16, align 4
  store i32 0, i32* %24, align 4
  br label %66

66:                                               ; preds = %114, %59
  %67 = load i32, i32* %24, align 4
  %68 = load i32, i32* %22, align 4
  %69 = icmp slt i32 %67, %68
  br i1 %69, label %70, label %117

70:                                               ; preds = %66
  %71 = load i32, i32* %16, align 4
  %72 = load i32, i32* %13, align 4
  %73 = load i32, i32* %24, align 4
  %74 = mul nsw i32 %72, %73
  %75 = add nsw i32 %71, %74
  %76 = load i32*, i32** %17, align 8
  %77 = load i32*, i32** %19, align 8
  %78 = load i32, i32* %77, align 4
  %79 = sext i32 %78 to i64
  %80 = getelementptr inbounds i32, i32* %76, i64 %79
  store i32 %75, i32* %80, align 4
  %81 = load i32*, i32** %19, align 8
  %82 = load i32, i32* %81, align 4
  %83 = add nsw i32 %82, 1
  store i32 %83, i32* %81, align 4
  %84 = load i32*, i32** %19, align 8
  %85 = load i32, i32* %84, align 4
  %86 = sext i32 %85 to i64
  %87 = load i32, i32* @PAGE_SIZE, align 4
  %88 = sext i32 %87 to i64
  %89 = udiv i64 %88, 4
  %90 = icmp eq i64 %86, %89
  br i1 %90, label %91, label %113

91:                                               ; preds = %70
  %92 = load %struct.mlx4_ib_dev*, %struct.mlx4_ib_dev** %11, align 8
  %93 = getelementptr inbounds %struct.mlx4_ib_dev, %struct.mlx4_ib_dev* %92, i32 0, i32 0
  %94 = load i32, i32* %93, align 4
  %95 = load %struct.mlx4_mtt*, %struct.mlx4_mtt** %12, align 8
  %96 = load i32*, i32** %18, align 8
  %97 = load i32, i32* %96, align 4
  %98 = load i32*, i32** %19, align 8
  %99 = load i32, i32* %98, align 4
  %100 = load i32*, i32** %17, align 8
  %101 = call i32 @mlx4_write_mtt(i32 %94, %struct.mlx4_mtt* %95, i32 %97, i32 %99, i32* %100)
  store i32 %101, i32* %23, align 4
  %102 = load i32, i32* %23, align 4
  %103 = icmp ne i32 %102, 0
  br i1 %103, label %104, label %106

104:                                              ; preds = %91
  %105 = load i32, i32* %23, align 4
  store i32 %105, i32* %10, align 4
  br label %118

106:                                              ; preds = %91
  %107 = load i32*, i32** %19, align 8
  %108 = load i32, i32* %107, align 4
  %109 = load i32*, i32** %18, align 8
  %110 = load i32, i32* %109, align 4
  %111 = add nsw i32 %110, %108
  store i32 %111, i32* %109, align 4
  %112 = load i32*, i32** %19, align 8
  store i32 0, i32* %112, align 4
  br label %113

113:                                              ; preds = %106, %70
  br label %114

114:                                              ; preds = %113
  %115 = load i32, i32* %24, align 4
  %116 = add nsw i32 %115, 1
  store i32 %116, i32* %24, align 4
  br label %66

117:                                              ; preds = %66
  store i32 0, i32* %10, align 4
  br label %118

118:                                              ; preds = %117, %104, %53
  %119 = load i32, i32* %10, align 4
  ret i32 %119
}

declare dso_local i32 @round_up(i32, i32) #1

declare dso_local i32 @pr_warn(i8*, i32, i32) #1

declare dso_local i32 @round_down(i32, i32) #1

declare dso_local i32 @mlx4_write_mtt(i32, %struct.mlx4_mtt*, i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
